<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="download_error_retry">安装包下载失败，请重试</string>
    <string name="version_update_now">立即更新</string>
    <string name="version_update_later">稍后更新</string>
    <string name="check_connection">请检查网络连接</string>
    <string name="str_current_version">当前版本号：</string>
    <string name="str_no_update">已是最新版本无需更新</string>
    <string name="download_completed">下载完成!</string>
    <string name="str_net_work_error">网络欠佳，正在重连…</string>
    <string name="server_net_error">请求失败,网络或服务器发生未知异常</string>
    <string name="amicable_view_loading">正在加载</string>
    <string name="str_no_use">暂不使用</string>
    <string name="str_pricacy">服务协议和隐私政策</string>
    <string name="agree">同意</string>
    <string name="str_no_data">暂无数据</string>
    <string name="str_net_woring">网络不给力，请稍后重试</string>
    <string name="str_change_language">切换语言</string>
    <string name="reload" >点击重新加载</string>

</resources>