<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginLeft="@dimen/dp_30"
    android:layout_marginRight="@dimen/dp_30">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
         android:gravity="center_horizontal"
        app:bl_shape="rectangle"
        app:bl_solid_color="@color/color_FFFFFF"
        app:bl_corners_radius="@dimen/dp_8"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_15"
            android:text="@string/str_pricacy"
            android:textColor="#333333"
            android:textSize="@dimen/sp_16"
            android:textStyle="bold" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="@dimen/dp_13"
            android:layout_marginTop="@dimen/dp_12"
            android:layout_marginRight="@dimen/dp_13"
            android:layout_marginBottom="@dimen/dp_18"
            android:layout_weight="1000"
            android:fillViewport="true">

            <com.wangzs.base.weight.CashLinkClickTextView
                android:id="@+id/tv_dialog_privacy_policy_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autoLink="web"
                android:lineSpacingExtra="@dimen/dp_5"
                android:textColor="#333333"
                android:textSize="@dimen/sp_13"
                app:linkColor="@color/color_2b99ff"
                app:showUnderLine="false" />
        </ScrollView>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_0_5"
            android:background="#EEEEEE" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_44"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_dialog_privacy_policy_exit"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/str_no_use"
                android:textColor="#999999"
                android:textSize="@dimen/sp_17" />

            <View
                android:layout_width="@dimen/dp_0_5"
                android:layout_height="match_parent"
                android:background="#EEEEEE" />

            <TextView
                android:id="@+id/tv_dialog_privacy_policy_agree"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/agree"
                android:textColor="#00CCB8"
                android:textSize="@dimen/sp_17" />
        </LinearLayout>

    </LinearLayout>


</RelativeLayout>