<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="424dp"
    android:layout_marginLeft="@dimen/dp_36"
    android:layout_marginRight="@dimen/dp_36"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_30"
            android:layout_gravity="bottom"
            android:background="@color/white" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@mipmap/version_update_dialog_bg"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_dialog_update_version_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_114"
                android:gravity="center_vertical"
                android:textColor="@color/white"
                android:textSize="@dimen/sp_12" />
        </LinearLayout>
    </FrameLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center_vertical"
        app:bl_corners_bottomLeftRadius="@dimen/dp_10"
        app:bl_corners_bottomRightRadius="10dp"
        app:bl_shape="rectangle"
        app:bl_stroke_color="@color/color_FFFFFF"
        app:bl_solid_color="@color/color_FFFFFF"
        app:bl_stroke_width="2dp">

        <TextView
            android:id="@+id/version_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/dp_15"
            android:layout_marginTop="@dimen/dp_23"
            android:layout_marginRight="@dimen/dp_15"
            android:text="新版本提示"
            android:textColor="@color/color_333333"
            android:textSize="@dimen/sp_16" />

        <TextView
            android:id="@+id/tv_dialog_update_version_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/version_info"
            android:layout_marginLeft="@dimen/dp_15"
            android:layout_marginTop="@dimen/dp_9"
            android:layout_marginRight="@dimen/dp_15"
            android:gravity="center_vertical"
            android:lineSpacingExtra="@dimen/dp_6"
            android:text="有新版本需要更新"
            android:textColor="@color/color_666666"
            android:textSize="@dimen/sp_14" />

        <LinearLayout
            android:id="@+id/layout_dialog_update_action_btn"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_40"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="@dimen/dp_15"
            android:layout_marginRight="@dimen/dp_15"
            android:layout_marginBottom="@dimen/dp_21"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_dialog_update_action_btn_left"
                android:layout_width="0dp"
                android:layout_height="@dimen/dp_40"
                android:layout_marginRight="@dimen/dp_40"
                android:layout_weight="1"
                android:gravity="center"
                android:paddingLeft="@dimen/dp_20"
                android:paddingRight="@dimen/dp_20"
                android:text="@string/version_update_later"
                android:textColor="@color/color_999999"
                android:textFontWeight="1"
                android:textSize="@dimen/sp_16"
                android:visibility="visible"
                app:bl_corners_radius="@dimen/dp_180"
                app:bl_shape="rectangle"
                app:bl_solid_color="@color/color_FFFFFF"
                app:bl_stroke_color="@color/color_999999"
                app:bl_stroke_width="@dimen/dp_1" />

            <TextView
                android:id="@+id/tv_dialog_update_action_btn_right"
                android:layout_width="0dp"
                android:layout_height="@dimen/dp_40"
                android:layout_weight="1"
                android:gravity="center"
                android:paddingLeft="@dimen/dp_20"
                android:paddingRight="@dimen/dp_20"
                android:text="@string/version_update_now"
                android:textColor="@color/white"
                android:textSize="@dimen/sp_16"
                android:visibility="visible"
                app:bl_corners_radius="@dimen/dp_180"
                app:bl_shape="rectangle"
                app:bl_solid_color="@color/color_00CCB8" />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_dialog_update_action_btn_status"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_40"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="@dimen/dp_15"
            android:layout_marginRight="@dimen/dp_15"
            android:layout_marginBottom="@dimen/dp_21"
            android:background="@drawable/selector_dialog_version_update_status"
            android:gravity="center"
            android:paddingLeft="@dimen/dp_20"
            android:paddingRight="@dimen/dp_20"
            android:text="@string/download_error_retry"
            android:textSize="@dimen/sp_16"
            android:visibility="gone" />

        <LinearLayout
            android:id="@+id/layout_dialog_update_download_progress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="@dimen/dp_15"
            android:layout_marginTop="@dimen/dp_10"
            android:layout_marginRight="@dimen/dp_15"
            android:layout_marginBottom="@dimen/dp_21"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:id="@+id/tv_dialog_update_download_progress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dp_10"
                android:text="下载中..."
                android:textColor="@color/color_00CCB8"
                android:textSize="@dimen/sp_14" />

            <ProgressBar
                android:id="@+id/pb_dialog_update_download_progress"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_25"
                android:max="100"
                android:progress="0"
                android:progressDrawable="@drawable/progressbar_color" />
        </LinearLayout>
    </RelativeLayout>
</LinearLayout>
